# DUM_E

DUM-E/: CMakeLists.txt  package.xml
DUM-E/kinect_robot/: CMakeLists.txt  package.xml
DUM-E/kinect_robot/launch/: custom.launch  default.launch  model.sdf  rviz_launch.launch
DUM-E/kinect_robot/src/: get_angles.py  move_arm.py
DUM-E/launch/: default.launch  rviz_launch.launch  spawn_camera.launch  spawn_sdf.launch
DUM-E/src/: inverse_kinem.py  joint_tracker.py  joint_tracker3D.py  test.py
